@@ -1,5 +1,6 @@
  * Updated German translations from Meviox
  * Add Finnish translations from Mika Takala
+ * Add workaround for broken HTC Linkify
 
 KeePassDroid (1.99.2)
  * Fix crash on entries without icons set (closes: #484) 
